--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lexer = { path = "../lexer" }
+fancy-regex = "0.10.0"
+lazy_static = "1.4.0"
+concat-string = "1.0.1"
