--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -3,9 +3,6 @@ name = "parser"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-fancy-regex = "0.10.0"
-lazy_static = "1.4.0"
-concat-string = "1.0.1"
+tree-sitter-wasm-lang = { path = "../tree-sitter" }
+tree-sitter = "~0.20"
