--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -5,8 +5,14 @@ edition = "2021"
 authors = ["Jonas Everaert"]
 
 [dependencies]
-parser = { path = "../parser" }
+# parser = { path = "../parser" }
+tree-sitter-wasm-lang = { path = "../tree-sitter" }
+tree-sitter = "~0.20"
 concat-string = "1.0.1"
+wabt = "0.10"
+
+[dev-dependencies]
+regex = "1.5.6"
 
 [build-dependencies]
 serde = { version = "1.0.136", features = ["derive"] }
