--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 authors = ["Jonas Everaert"]
 
 [dependencies]
-# parser = { path = "../parser" }
 tree-sitter-wasm-lang = { path = "../tree-sitter" }
 tree-sitter = "~0.20"
 concat-string = "1.0.1"
@@ -13,6 +12,7 @@ wabt = "0.10"
 
 [dev-dependencies]
 regex = "1.5.6"
+wasmer = "2.2"
 
 [build-dependencies]
 serde = { version = "1.0.136", features = ["derive"] }
